fix background on ios

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -14,6 +14,8 @@ body {
   /*background-color: #FFF;*/
   background: url('/images/forWelcome/cloud.jpeg') no-repeat center center fixed;
   background-size: 100% 100%;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 a {
